shifted the css code to the index.html because it was causing issues with the navbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 /*color scheme [Terracotta red, light beige, & muted teal = #B85042, #E7E8D1, #A7BEAE] */
+
 @import "navbar.css";
 
 /*styling standard blockquote format for every page*/
@@ -17,6 +18,7 @@ blockquote{
   background:#EDEDED;
 }
 
+/*adding font, color and position styling*/
 blockquote::before{
   font-family:Arial;
   content: "\201C";
@@ -27,45 +29,10 @@ blockquote::before{
   top:-10px;
 }
 
+/*adding the '' to the styling*/
 blockquote::after{
   content: '';
 }
-
-
-/* Styling the list items */
-
-/*making the list appear in the middle of the page*/
-.content-container {
-  width: 50%; 
-  margin: auto;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-
-}
-
-/*styling list element to have no list syle*/
-.list-container > ul {
-  list-style-type: none; 
-  padding: 0;
-  
-}
-
-/*styling the li element to have look more appealing*/
-.list-container > li {
-  margin: 0 0 10px; 
-  padding: 10px;
-  background-color: #A7BEAE; 
-  border-radius: 5px; 
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
-  
-}
-
-/* Hover effect for list items */
-li:hover {
-  background-color: #A7BEAE; 
-  transition: background-color 0.3s; 
-}
-
-
 
 
 /*styling the footer for every blog page*/
